--- a/template.html
+++ b/template.html
@@ -72,7 +72,7 @@ _gaq.push(['_trackPageview']);
 <div class="right-col">
 <div id="source">
 <h2>Source</h2>
-<p>If you want, download <a href="v3.zip">the source</a>. It runs on Python (tested on 2.7) with no dependencies and generates the HTML in-place. It would probably run well on a dedicated server with a cron job.</p>
+<p>If you want, download <a href="https://github.com/ianharmon/steam-card-pricer">the source</a>. It runs on Python (tested on 2.7) with no dependencies and generates the HTML in-place. It would probably run well on a dedicated server with a cron job.</p>
 </div>
 
 <div id="similar">
